{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 15,
  "lineage": "d8b344d5-f05e-18d3-417f-ccdba4e7eaff",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/136e6cde-93fc-4f7d-85b2-b2e9ce110cc7/resourceGroups/learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22/providers/Microsoft.Network/networkInterfaces/test-12-11-2022-NIC",
            "internal_domain_name_suffix": "gdspuxto3vbe1ccwz5afwr5evd.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "exampleconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/136e6cde-93fc-4f7d-85b2-b2e9ce110cc7/resourceGroups/learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22/providers/Microsoft.Network/publicIPAddresses/test-12-11-2022-PIP",
                "subnet_id": "/subscriptions/136e6cde-93fc-4f7d-85b2-b2e9ce110cc7/resourceGroups/learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22/providers/Microsoft.Network/virtualNetworks/test-12-11-2022-VN/subnets/test-12-11-2022-SN"
              }
            ],
            "location": "westus",
            "name": "test-12-11-2022-NIC",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22"
          },
          "dependencies": [
            "azurerm_public_ip.vm",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/136e6cde-93fc-4f7d-85b2-b2e9ce110cc7/resourceGroups/learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22/providers/Microsoft.Network/networkInterfaces/test-12-11-2022-NIC|/subscriptions/136e6cde-93fc-4f7d-85b2-b2e9ce110cc7/resourceGroups/learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22/providers/Microsoft.Network/networkSecurityGroups/test-12-11-2022-NSG",
            "network_interface_id": "/subscriptions/136e6cde-93fc-4f7d-85b2-b2e9ce110cc7/resourceGroups/learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22/providers/Microsoft.Network/networkInterfaces/test-12-11-2022-NIC",
            "network_security_group_id": "/subscriptions/136e6cde-93fc-4f7d-85b2-b2e9ce110cc7/resourceGroups/learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22/providers/Microsoft.Network/networkSecurityGroups/test-12-11-2022-NSG"
          },
          "dependencies": [
            "azurerm_network_interface.example",
            "azurerm_network_security_group.example",
            "azurerm_public_ip.vm",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/136e6cde-93fc-4f7d-85b2-b2e9ce110cc7/resourceGroups/learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22/providers/Microsoft.Network/networkSecurityGroups/test-12-11-2022-NSG",
            "location": "westus",
            "name": "test-12-11-2022-NSG",
            "resource_group_name": "learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "MSSQLRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/136e6cde-93fc-4f7d-85b2-b2e9ce110cc7/resourceGroups/learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22/providers/Microsoft.Network/networkSecurityGroups/test-12-11-2022-NSG/securityRules/MSSQLRule",
            "name": "MSSQLRule",
            "network_security_group_name": "test-12-11-2022-NSG",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22",
            "source_address_prefix": "167.220.255.0/25",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "RDPRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/136e6cde-93fc-4f7d-85b2-b2e9ce110cc7/resourceGroups/learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22/providers/Microsoft.Network/networkSecurityGroups/test-12-11-2022-NSG/securityRules/RDPRule",
            "name": "RDPRule",
            "network_security_group_name": "test-12-11-2022-NSG",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22",
            "source_address_prefix": "167.220.255.0/25",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/136e6cde-93fc-4f7d-85b2-b2e9ce110cc7/resourceGroups/learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22/providers/Microsoft.Network/publicIPAddresses/test-12-11-2022-PIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus",
            "name": "test-12-11-2022-PIP",
            "resource_group_name": "learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/136e6cde-93fc-4f7d-85b2-b2e9ce110cc7/resourceGroups/learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22/providers/Microsoft.Network/virtualNetworks/test-12-11-2022-VN/subnets/test-12-11-2022-SN",
            "name": "test-12-11-2022-SN",
            "resource_group_name": "learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22",
            "virtual_network_name": "test-12-11-2022-VN"
          },
          "dependencies": [
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5efae430-ed6e-4d42-8856-cfc05b47e4ab",
            "id": "/subscriptions/136e6cde-93fc-4f7d-85b2-b2e9ce110cc7/resourceGroups/learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22/providers/Microsoft.Network/virtualNetworks/test-12-11-2022-VN",
            "location": "westus",
            "name": "test-12-11-2022-VN",
            "resource_group_name": "learn-7b8e3c18-9b7f-48f1-ad55-baf9d2e9db22"
          }
        }
      ]
    }
  ]
}